fix: Fix Bug on Section1
A bug: overlapping a phone element with buttons

--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ body {
     height: 4.5rem;
   }
   .phone {
-    width: 45%;
+    width: 60%;
     transform: translateY(0);
   }
   .scroll-icon {
